# lab2

./: ArraySequence.cpp  ArraySequence.h  CMakeLists.txt  DynamicArray.h  DynamicArray.hpp  LinkedList.cpp  LinkedList.h  ListSequence.cpp  ListSequence.h  Sequence.h  UI.cpp  UI.h  main.cpp  tests.cpp  tests.h
